# roadmap

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  context.txt  handoff message.txt  panic  slopchop.toml  tasks.toml  tasks.toml.bak
.roadmap/: state.db
.slopchop_apply_backup/1765902508/src/engine/: graph.rs
.slopchop_apply_backup/1765902612/src/: main.rs
.slopchop_apply_backup/1765906314/src/engine/: resolver.rs
.slopchop_apply_backup/1765906369/src/engine/: mod.rs
.slopchop_apply_backup/1765906418/src/engine/: fuzzy.rs  resolver.rs
.slopchop_apply_backup/1765906662/src/: main.rs
.slopchop_apply_backup/1765906945/src/handlers/: next.rs
.slopchop_apply_backup/1765907040/src/engine/: fuzzy.rs
.slopchop_apply_backup/1765908928/src/engine/: graph.rs
.slopchop_apply_backup/1765908928/src/handlers/: check.rs
.slopchop_apply_backup/1765910169/src/: main.rs
.slopchop_apply_backup/1765910315/src/: main.rs
.slopchop_apply_backup/1765911059/: README.md
.slopchop_apply_backup/1766041785/src/: main.rs
.slopchop_apply_backup/1766042047/src/: main.rs
DOCS/: DEFINITION_OF_SUCCESS.md  criticism.txt  refactor-opportunties.txt
DOCS/archived/: sabotage-brief.md  truth-engine-brief.md
DOCS/archived/v0.4.0/: DEFINITION_OF_SUCCESS.md  slopchop-task-mig.txt
src/: main.rs  panic.rs
src/engine/: context.rs  db.rs  fuzzy.rs  graph.rs  mod.rs  repo.rs  resolver.rs  runner.rs  state.rs  types.rs
src/engine/repo/: proofs.rs  tasks.rs
src/handlers/: add.rs  check.rs  do_task.rs  history.rs  init.rs  list.rs  mod.rs  next.rs  stale.rs  status.rs  why.rs
(+44 files in other folders)
